# AudioBookRequest-ext

./: .dockerignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  justfile  package-lock.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: funding.yml  release-please-config.json
.github/workflows/: build.yaml  check-format.yaml  release-please.yaml
alembic/versions/: 03bea7e891dd_add_missing_psql_migrations.py  0fa71b2e5d30_add gotify support.py  592ca7993f69_add_user_extra_data_field.py  63489e50e337_remove_notification_services.py  6477fe89a011_rename_prowlarr_date_col.py  76d7ccb8a116_add_succ_failed_event_type.py  7735bdd2c970_separate_primary_key.py  787e0b375062_add_user_group_add_bookrequest.py  845d93d41d01_more_info_in_bookrequests.py  8ebcc63e79ea_add_root_user_attribute.py  939af2c2c9ea_add_user.py  9420621b2ed4_migrate_mam_enabled.py  9f0430047af4_add_notifications.py  cafe562e2832_simplify_bookrequests.py  cd14e5f0977c_add_apikey_table.py  e4f418be2275_add_updated_at_to_bookrequest.py
app/: main.py
app/internal/: book_search.py  env_settings.py  models.py  notifications.py  query.py
app/routers/: api.py  auth.py  root.py  search.py  settings.py  wishlist.py
app/util/: db.py  json_type.py  recommendations.py  templates.py  toast.py
static/: service-worker.js  tw.css
templates/: base.html  init.html  login.html  manual.html  root.html  search.html
templates/components/: ai_home_sections.html  ai_page_sections.html  book_card.html
templates/recommendations/: ai.html  for_you.html
(+45 files in other folders)
